--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -36,7 +36,7 @@
             <div class="icon">🌍</div>
             <div style="gap:8px;">
               <span class="title">Publique</span>
-              <span class="desc">Visible par toute la communauté.</span>
+              <span class="desc">Visible par tous en la partageant.</span>
             </div>
           </div>
         </label>
