--- a/app/views/pages/mentionslegales.html.erb
+++ b/app/views/pages/mentionslegales.html.erb
@@ -59,6 +59,11 @@
     <br>
     Toute utilisation des contenus soumis par les utilisateurs au-delà des besoins de fonctionnement du Site nécessitera une autorisation écrite préalable de l'utilisateur concerné.
   </p>
+  <div style="opacity: 0.5;">
+    <%= link_to secret_badge_path, class: "secret-badge-link", title: "???" do %>
+      <span>.</span>
+    <% end %>
+  </div>
   <h2>6 - Liens externes</h2>
   <p>
     Le Site peut contenir des liens vers des sites web externes. <a href="https://omniscientdesign.fr" class="black underline" target="_blank">omniscientdesign.fr</a> ne peut être tenu responsable du contenu de ces sites tiers ni de leurs pratiques en matière de confidentialité. L'Utilisateur accède à ces liens externes à ses propres risques.
