--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@
 @import "layout/header";
 @import "layout/search";
 
+@import "pages/badges";
 @import "pages/defaultpage";
 @import "pages/homepage";
 @import "pages/kitpresse";
