--- a/app/views/designers/_form.html.erb
+++ b/app/views/designers/_form.html.erb
@@ -132,6 +132,7 @@
               { 
                 class: "form-control select2", 
                 multiple: true, 
+                required: true,
                 data: { 
                   controller: "select2",
                   select2_placeholder_value: t('add_designer.steps.2.country_placeholder') 
