--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -71,7 +71,16 @@
   z-index: 99;
   top: 0px;
   padding: 24px 16px;
+  height: 100%;
   position: relative;
+}
+
+.flex-info-card-left {
+  height: 85%;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  justify-content: space-between;
 }
 
 .flex-info-card .info-card-dark {
@@ -88,8 +97,7 @@
 .domaine-flex-card {
   display: flex;
   flex-direction: column;
-  align-items: end;
-  gap: 8px;
+  gap: 4px;
 }
 
 .title-card {
