--- a/app/assets/stylesheets/components/_popup.scss
+++ b/app/assets/stylesheets/components/_popup.scss
@@ -1,4 +1,4 @@
-@import 'abstracts/variables';
+@import "abstracts/variables";
 
 .popup {
   display: none;
@@ -40,10 +40,6 @@
   padding: 0 5%;
 }
 
-.popup .popup-content form {
-  padding: 0 50px;
-}
-
 .close-popup {
   scale: 0.7;
   cursor: pointer;
@@ -57,6 +53,7 @@
   margin-top: 32px;
   padding: 0 50px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -97,7 +94,26 @@
   margin-top: 24px;
 }
 
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .top-popup {
+    height: 70px;
+  }
 
+  .popup-content {
+    width: 90vw;
+  }
+  .title-popup {
+    margin-bottom: 0;
+  }
+
+  .flex-title-popup {
+    flex-direction: column;
+    margin-top: 24px;
+    gap: 8px;
+    padding: 0 30px;
+    margin-bottom: 32px;
+  }
+}
 @media screen and (min-width: 0px) and (max-width: 425px) {
   .top-popup {
     height: 70px;
@@ -108,7 +124,7 @@
   }
 
   .popup-content {
-    width: 90vw;
+    width: 95vw;
   }
 
   .flex-title-popup {
@@ -116,6 +132,7 @@
     margin-top: 24px;
     padding: 0 16px;
     gap: 8px;
+    margin-bottom: 32px;
   }
 
   .title-popup {
@@ -126,29 +143,14 @@
     width: fit-content;
     font-size: 16px;
   }
+
+  .title-popup {
+    margin-bottom: 0;
+  }
 }
-
-@media screen and (min-width: 426px) and (max-width: 768px) {
-  .top-popup {
-    height: 70px;
-  }
-
-  .popup-content {
-    width: 90vw;
-  }
-
-  .flex-title-popup {
-    margin-top: 24px;
-    padding: 0 30px;
-  }
-
-}
-
-
-
 // Save Liste
 .box-list {
-  width: 80%;
+  width: 85%;
   padding: 24px 0;
   align-items: center;
   display: flex;
@@ -193,7 +195,7 @@
 
 .nb-list {
   font-size: 16px;
-  color: #8D9299;
+  color: #8d9299;
 }
 
 .hover-btn {
@@ -206,7 +208,7 @@
 
 @media screen and (min-width: 446px) and (max-width: 768px) {
   .box-list {
-    padding: 0px 40px;
+    padding: 20px 0px;
   }
 
   .box-list svg {
@@ -222,13 +224,11 @@
     width: 60px;
     height: 60px;
   }
-
-
 }
 
 @media screen and (min-width: 0px) and (max-width: 445px) {
   .box-list {
-    padding: 0px 16px;
+    padding: 16px;
   }
 
   .box-list svg {
@@ -248,7 +248,6 @@
   .nb-list {
     font-size: 14px;
   }
-
 }
 
 body.dark-mode {
