--- a/app/assets/stylesheets/pages/_reference.scss
+++ b/app/assets/stylesheets/pages/_reference.scss
@@ -336,7 +336,7 @@
   height: 30px;
   border-radius: 5px;
   font-size: 20px;
-
+  z-index: 99;
   &:hover {
     cursor: pointer;
     background-color: #3c3c3c;
