--- a/app/views/designers/index.html.erb
+++ b/app/views/designers/index.html.erb
@@ -80,7 +80,18 @@
        data-controller="scroll-vertical"
        data-scroll-vertical-cooldown-value="500">
     <div class="nav-home-mobile">
-      <%= image_tag("logo.svg", alt: "Logo", class: "logo-img") %>
+       <%= link_to(notifications_path) do %>
+        <div class="circle circle-notif">
+          <svg width="18" height="18" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M20.1825 5.26C19.3238 4.76133 18.7932 3.83333 18.7945 2.83333V2.82933C18.7958 1.26667 17.5438 0 15.9998 0C14.4558 0 13.2038 1.26667 13.2038 2.82933V2.83333C13.2052 3.83467 12.6758 4.76133 11.8158 5.26C5.59317 8.876 9.16917 20.88 2.6665 23.0013V25.3333H29.3332V23.0013C22.8305 20.88 26.4065 8.876 20.1825 5.26ZM15.9998 1.33333C16.7358 1.33333 17.3332 1.932 17.3332 2.66667C17.3332 3.40267 16.7358 4 15.9998 4C15.2638 4 14.6665 3.40267 14.6665 2.66667C14.6665 1.932 15.2638 1.33333 15.9998 1.33333ZM19.9998 28C19.9998 30.1307 18.1438 32 16.0385 32C13.9332 32 11.9998 30.1307 11.9998 28H19.9998Z" fill="white"/>
+          </svg>
+          <% if current_user && @unread_notifications_count.to_i > 0 %>
+            <div class="notification-counter">
+              <div class="notification-badge"><%= @unread_notifications_count %></div>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
       <div class="switch-home-mobile">
         <%= link_to t('global.designers'), designers_path, class: "active"  %>
         <%= link_to t('global.references'), oeuvres_path%>
