--- a/app/views/oeuvres/_oeuvre.html.erb
+++ b/app/views/oeuvres/_oeuvre.html.erb
@@ -414,8 +414,17 @@
         </div>
         <div class="validation" id="validation" data-validation-overlay-target="validation">
           <%= image_tag "logo-white.svg", alt: "", class:"logo-overlay" %>
-          <p class="validation-title">Merci pour votre contribution !</p>
-          <p class="validation-text">Votre fiche est actuellement en cours de traitement...</p>
+            <svg width="76" height="73" viewBox="0 0 76 73" fill="none" xmlns="http://www.w3.org/2000/svg" class="svg-overlay-validation">
+              <path d="M69 33.4961V36.5186C68.996 43.527 66.7266 50.3463 62.5303 55.9595C58.334 61.5727 52.4357 65.6791 45.7149 67.6663C38.9941 69.6534 31.8111 69.4148 25.237 66.986C18.663 64.5572 13.0501 60.0684 9.23562 54.1891C5.42112 48.3097 3.60932 41.3548 4.07045 34.3616C4.53158 27.3684 7.24092 20.7117 11.7944 15.3841C16.3479 10.0565 22.5015 6.34359 29.3376 4.79908C36.1737 3.25456 43.3259 3.9612 49.7275 6.8136" stroke="white" stroke-width="6.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M72.25 7.26895L36.5 43.0189L26.75 33.2689" stroke="#06D7A0" stroke-width="6.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+            <p class="validation-title">Merci pour votre contribution !</p>
+            <p class="validation-text">Votre fiche est actuellement en cours de traitement. Veuillez noter que ce processus peut prendre quelques jours. Vous serez informé(e) via votre compte dès que celle-ci sera traitée.</p>
+            <svg width="30" height="45" viewBox="0 0 30 45" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M27.8206 3L15.4103 14L3.00009 3" stroke="white" stroke-opacity="0.1" stroke-width="3.0207" stroke-linecap="square"/>
+              <path d="M27.8206 17L15.4103 28L3.00009 17" stroke="white" stroke-opacity="0.5" stroke-width="3.0207" stroke-linecap="square"/>
+              <path d="M27.8206 31L15.4103 42L3.00009 31" stroke="white" stroke-width="3.0207" stroke-linecap="square"/>
+            </svg>
           </div>
         <div class="overlay" id="overlay" data-validation-overlay-target="overlay"></div>
       <% end %>
